# tRAG

./: LICENSE  cli.py  main.py  pyproject.toml  rag.py  rag_lc.py  requirements.txt  run_doc2_tests.py
benchmarks/: run_doc2_comparison.py
data/: doc2_eval_report.json  document2.txt  document2_tablerag_results.json  document2_test_queries.txt  document2_test_results.json  t2_finqa_eval.json  tables_context.txt  wtq_eval.json
docs/: DESIGN.md  ISSUES.md  PROMPT_CUSTOMIZATION_PLAN.md  SDK.md
examples/: langchain_table_rag.py
tablerag/: __init__.py  cli.py  generate.py  models.py  pipeline.py  providers.py  summarize.py
tablerag/chunk/: __init__.py  table_splitter.py  text_splitter.py
tablerag/compute/: __init__.py  sandbox.py  sql_agent.py
tablerag/evals/: __init__.py  __main__.py  loaders.py  metrics.py  models.py  runner.py
tablerag/index/: __init__.py  backends.py  docstore.py  dual_vector.py  embedder.py  lexical.py
tablerag/integrations/: __init__.py  langchain.py
tablerag/parse/: __init__.py  detector.py  sections.py  tables.py
tablerag/route/: __init__.py  classifier.py
tests/: test_chunk.py  test_compute.py  test_evals.py  test_index.py  test_langchain_integration.py  test_options.py  test_parse.py  test_prompts.py  test_providers.py  test_route.py  test_summarize.py
trag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
