[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trag"
version = "0.1.0"
description = "Simple RAG for table documentation using Gemini"
requires-python = ">=3.9"
dependencies = [
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-community>=0.4.0",
  "langchain-google-genai>=4.0.0",
  "scikit-learn>=1.5.0",
  "duckdb>=1.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=1.0.0"]
evals = ["datasets>=2.14.0"]

[project.scripts]
trag = "cli:main"
trag-lc = "rag_lc:main_cli"
trag-tab = "tablerag.cli:main"

[tool.setuptools]
py-modules = ["cli", "rag", "rag_lc", "main"]

[tool.setuptools.packages.find]
include = ["tablerag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
